apps/dex/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
spec:
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 5556
      targetPort: http
    - name: telemetry
      port: 5558
      targetPort: telemetry
  selector:
    app.kubernetes.io/instance: dex
    app.kubernetes.io/name: dex
