apps/dex/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
spec:
  rules:
  - backendRefs:
    - name: dex
      port: http
