apps/dex/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dex
spec:
  ingress:
    - ports:
        - port: http
        - port: telemetry
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: dex
      app.kubernetes.io/name: dex
  policyTypes:
    - Ingress
